<resources>
    <string name="app_name">Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textName">Name</string>
    <string name="textScore">5.0</string>
    <string name="textData">基本資料</string>
    <string name="textWallet">錢包</string>
    <string name="textOrder">訂單記錄</string>
    <string name="textOpinion">意見反應</string>
    <string name="textOpen">Open</string>
    <string name="textClose">Close</string>
    <string name="textCall">呼叫</string>
    <string name="textStart">請輸入出發地：</string>
    <string name="textEnd">請輸入目的地：</string>
    <string name="textOk">確認</string>
    <string name="textCancel">取消</string>
    <string name="textCannotbenull">輸入不能為空</string>
    <string name="textYes">確定</string>
    <string name="textNo">取消</string>
    <string name="textMessage">確認呼叫代駕?</string>
    <string name="textNoDriverFound">no driver found</string>
    <string name="textLocationNotFound">Location is not found</string>
    <string name="textNoDriver">配對失敗</string>
    <string name="textInsertFail">insert fail</string>
    <string name="textInsertSuccess">insert successfully</string>
    <string name="textCancelOrder">取消訂單</string>
    <string name="textCancelConfirm">確定要取消訂單？</string>
    <string name="textCancelCheck">你的訂單已被取消</string>
    <string name="textLogout">登出</string>
    <string name="personalData">基本資料</string>
    <string name="textPhone">手機</string>
    <string name="textEmail">Email</string>
    <string name="textCarAssurance">車輛與保險</string>
    <string name="textCarAssuranceEdit">編輯車輛與保險</string>
    <string name="textRealName">真實姓名</string>
    <string name="textEditDone">完成修改</string>
    <string name="textCustomerEdit">編輯個人資料</string>
    <string name="textCarEdit">編輯車輛資料</string>
    <string name="textCarNumber">車號</string>
    <string name="textCarModel">車型</string>
    <string name="textCarDamage">車體險</string>
    <string name="textExpire">到期日</string>
    <string name="textConfirmed">已認證</string>
    <string name="textNotConfirmed">未認證</string>
    <string name="textCarThirdParty">第三方責任險</string>
    <string name="textNoNetwork">連線失敗</string>
    <string name="textNoAssurancesFound">保險資料載入失敗</string>
    <string name="textAssuranceEdit">編輯保險資料</string>
    <string name="textAssuranceIsEmpty">尚未認證</string>
    <string name="textAssuranceIsSuccessful">認證成功</string>
    <string name="textAssuranceIsProcessing">認證中</string>
    <string name="textAssuranceFail">認證失敗</string>
    <string name="textAssuranceExpired">認證過期</string>
    <string name="textCompulsory">強制險</string>
    <string name="textNameIsInvalid">姓名不能為空值</string>
    <string name="textUpdateFail">上傳失敗</string>
    <string name="textUpdateSuccess">更新完成</string>
    <string name="textPhoneIsInvalid">手機不能為空值</string>
    <string name="textEmailIsInvalid">Email不能為空值</string>
    <string name="textNoCustomerFound">找不到使用者資料</string>
    <string name="textNoInsuranceFound">找不到保險資料</string>
    <string name="textCarBrand">品牌</string>
    <string name="textCarColor">顏色</string>
    <string name="textPlateIsInvalid">請輸入車牌</string>
    <string name="textBrandIsInvalid">請輸入汽車廠牌</string>
    <string name="textModelIsInvalid">請輸入汽車型號</string>
    <string name="textTakePicture">拍照</string>
    <string name="textInsuranceName">保險名稱</string>
    <string name="textInsuranceDate">yyyy-MM-dd</string>
    <string name="textInsuranceDateTitle">到期日</string>
    <string name="textCommit">申請審核</string>
    <string name="textDateIsInvalid">請輸入保險到期日</string>
    <string name="textPickPicture">從相簿選擇</string>
    <string name="textNoCameraApp">相機功能無法使用</string>
    <string name="textNoCrop">無法裁切相片</string>
    <string name="textImageIsInvalid">請上傳保險資料</string>
    <string name="textDirNotCreated">Directory Picture 無法建立</string>
    <string name="textNoImagePickerAppFound">無法選擇照片</string>
    <string name="textNoImageCropAppFound">無法取得截圖</string>
    <string name="textShouldGrant">permission to access external</string>
    <string name="textPassword">密碼</string>
    <string name="textLogin">登入</string>
    <string name="textForgetPassword">忘記密碼</string>
    <string name="textSignUpYet">尚未擁有帳戶嗎？</string>
    <string name="textConfirm">確認</string>
    <string name="textPasswordChangeSuccess">密碼已更改完成</string>
    <string name="textWhiteNewPassword">請輸入新密碼</string>
    <string name="textCheckNewPassword">請再次輸入新密碼</string>
    <string name="textCheckNumber">驗證碼</string>
    <string name="textNotGetCheckNumber">未收到驗證碼</string>
    <string name="textSignUpDetail">"請詳填以下資料，完成後會有專人審查，謝謝！  "</string>
    <string name="textPhoneNumberCheckDetail">"已寄送簡訊，請輸入收到的驗證碼  "</string>
    <string name="textWhiteEmail">請輸入註冊信箱</string>
    <string name="textPhoneNumber">手機號碼</string>
    <string name="textContinue">下一頁</string>
    <string name="textSignUP">註冊</string>
    <string name="textCreditCardType">信用卡類別(VISA/MasterCard/JBC/...)</string>
    <string name="textCreditCardNumber">信用卡卡號</string>
    <string name="textCreditcardDate">信用卡到期日(MM/YY)</string>
    <string name="textCreditcardSecureCode">安全碼</string>
    <string name="textIdFront">身份證正面</string>
    <string name="textIdBack">身份證反面</string>
    <string name="textChangePassword">更改密碼</string>
    <string name="textCheck">驗證</string>
    <string name="textOrderNumber">訂單編號</string>
    <string name="textOrderDate">行程日期</string>
    <string name="textOrderMoney">行程費用</string>
    <string name="textOrderPlate">行程車輛</string>
    <string name="textOrderDriver">行程駕駛</string>
    <string name="textOrderHelp">需要協助處理這趟行程的問題嗎？</string>
    <string name="textStartAddress">出發地</string>
    <string name="textEndAddress">目的地</string>
    <string name="textNoOrdersFound">您沒有訂單記錄</string>

    <string name="textPersonalPhoto">上傳照片</string>
    <string name="textTryAgain">請再試一次</string>
    <string name="textNoMap">Google Map 無法顯示</string>

    <string name="textUserPhoto">大頭貼</string>

    <string name="textConfirmPay">確認付款</string>
    <string name="textCannotUseGPay">無法使用 Google Pay</string>
    <string name="textCanceled">Canceled by the user</string>
    <!-- 開發者 > 應用程式 -->
    <string name="TapPay_AppID">16478</string>
    <string name="TapPay_AppKey">app_ykQ6dEWqBRz5kfqy5IthqwWCkXtsveYs8e5lLPhcnF8a81k2llyxoMvjSQEF</string>
    <!-- 帳戶資訊 -->
    <string name="TapPay_PartnerKey">partner_baZHmarYCq9p3erZ0XO3HyblieOAtdnis6eXhrvITFM1WqMs2A1kTQqh</string>
    <!-- 商家管理 -->
    <string name="TapPay_MerchantName">TW_TAISHIN</string>
    <string name="TapPay_MerchantID">123456789_TAISHIN</string>
    <string name="textTotal">Total</string>
    <string name="textMain">首頁</string>
    <string name="textReaction">意見反應</string>
    <string name="textNoOpinionsFound">no opinion found</string>
</resources>