<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lu.customer.signup_and_login.SignUp_2" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCarNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorTextAppearance="@style/TextInputError"
                app:hintTextAppearance="@style/TextInputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCarNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/textCarNumber"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCarModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorTextAppearance="@style/TextInputError"
                app:hintTextAppearance="@style/TextInputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCarModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/textCarModel"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorTextAppearance="@style/TextInputError"
                app:hintTextAppearance="@style/TextInputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCarColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/textCarColor"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvIdFront"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textIdFront" />

            <ImageView
                android:id="@+id/ivIdFront"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <TextView
                android:id="@+id/tvIdBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textIdBack" />

            <ImageView
                android:id="@+id/ivIdBack"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <TextView
                android:id="@+id/tvCarDamage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textCarDamage" />

            <ImageView
                android:id="@+id/ivCarDamage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <TextView
                android:id="@+id/tvCompulsory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textCompulsory" />

            <ImageView
                android:id="@+id/ivCompulsory"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <TextView
                android:id="@+id/tvCarThirdParty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textCarThirdParty" />

            <ImageView
                android:id="@+id/ivCarThirdParty"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <TextView
                android:id="@+id/tvUserPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/textUserPhoto" />

            <ImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/group_367" />

            <Button
                android:id="@+id/btSignUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginLeft="161dp"
                android:background="@drawable/main_button"
                android:text="@string/textSignUP"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>