<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".user.CarEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="28dp"
        app:errorTextAppearance="@style/TextInputError"
        app:hintTextAppearance="@style/TextInputHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textCarNumber"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        app:errorTextAppearance="@style/TextInputError"
        app:hintTextAppearance="@style/TextInputHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textCarBrand" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        app:errorTextAppearance="@style/TextInputError"
        app:hintTextAppearance="@style/TextInputHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textCarModel" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        app:errorTextAppearance="@style/TextInputError"
        app:hintTextAppearance="@style/TextInputHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textCarColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="59dp"
            android:background="@drawable/main_button"
            android:text="@string/textEditDone"
            android:textColor="#1565C0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"  />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>